--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,14 +24,14 @@
                     {{/unless}}
             </div>
         </section>
-        <section class="nav-section feautures-section" style="margin:10px; text-align:center;">
+        <section class="nav-section feautures-section"  id = "alignMargin">
             <div class="nav-section-image-wrapper onscreen">
                 <img alt="fermentation" src="photos/ferment2.jpeg" class="features-image-mobile" width="1000px;;"
                     height="500px;;" data-pin-nopin="true">
                 <div class="dotted-line"></div>
 
             </div>
-            <div class="features-content nav-content" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+            <div class="features-content nav-content"   >
                 <h2 class="features-overview-title nav-title" style="font-size:37px;  color:sandybrown; letter-spacing:4px;">Find
                     or Create the Perfect Recipe</h2>
                     <p class="description" style="color:slategray; font-size:22px; margin-top:5px;">Are you a master at fermenting and have always wanted to share your creations with the world?</p>
