--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -8,7 +8,7 @@
       </div>
     </div>
   {{else}}
-    <div class="form login-form" style="background-color:sandybrown; margin-bottom:180px">
+    <div class="form login-form" style="background-color:sandybrown;">
       <input type="text" name="username" placeholder="username">
       <input type="password" name="password" placeholder="password">
       <div class="buttons">
@@ -22,7 +22,6 @@
       <input type="password" name="password" placeholder="password">
       <div class="buttons">
         <a class="button login" href="/" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Log In</a>
-        
         <button class="button signup" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Sign Up</button>
       </div>
     </div>
