--- a/views/NewProjectPage.handlebars
+++ b/views/NewProjectPage.handlebars
@@ -1,4 +1,4 @@
-<div class="header" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; ">
+<div class="header tableHeader" >
     <h1>Add New Project</h1>
 
     <div class="modal" id="modal" tabindex="-1" role="dialog">
