--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/styles.css" type="text/css" />
     <link rel="stylesheet" href="/css/main.css">
 
-	
+
     <title>Fermentor</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
@@ -20,108 +20,112 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
 
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <script src="/js/form.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/task.js"></script>
     <script src="/js/Register.js"></script>
-	<script src="/js/tasks-block.js"></script>
+    <script src="/js/tasks-block.js"></script>
     <script src="/js/mynotes.js"></script>
 
 </head>
 
 <body>
     {{#if user}}
-    
-    <nav class="nav-bar" style="background-color:white; padding:2px; ">
-      
-        <section class="top-bar" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+
+    <nav class="nav-bar">
+
+        <section class="top-bar">
             <div id="logo">
-                    
-                <a href="/"><img src="/photos/logo.png" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true"></a>
-                <div style="color:sandybrown;margin-left:62%;">Logged in as: {{user.username}}<a class="user"></a></div>
+
+                <a href="/"><img src="/photos/logo.png" class="auth-image" alt="logo" width="17%" height="27%"
+                        data-pin-nopin="true"></a>
+                <div id="username">Logged in as: {{user.username}}<a class="user"></a></div>
                 <a href="/myprojects">
-                <button class="profile" data-tracking="My Profile" title="Profile"  aria-label="Profile" style="color:sandybrown; transform: translateY(4px); border:1.5px solid orange; margin-left:45%;">My Projects</button></a>
-                 <a href="/new">
-                <button class="newproject" data-tracking="new" title="newproject" hrer="/new" aria-label="New" style="color:sandybrown; transform: translateY(4px); border: 1.5px solid orange;">Create a Project</button>
+                    <button class="profile" data-tracking="My Profile" title="Profile" aria-label="Profile" id="profile">My
+                        Projects</button></a>
+                <a href="/new">
+                    <button class="newproject" data-tracking="new" title="newproject" hrer="/new" aria-label="New" id="newProject">Create
+                        a Project</button>
                 </a>
-                 <a href="/projectlist">
-                <button class="recipes" data-tracking="recipes" title="Recipes" href="/projectlist" aria-label="Recipes" style="color:sandybrown; transform:translateY(4px); border:1.5px solid orange; heigth:30px;">All Recipes</button>
+                <a href="/projectlist">
+                    <button class="recipes" data-tracking="recipes" title="Recipes" href="/projectlist" aria-label="Recipes"
+                        id="allRecipies">All Recipes</button>
                 </a>
-                <button class="logout" data-tracking="Sign In" title="Sign in" href="#" aria-label="Sign in" style=" color:sandybrown;  transform: translateY(4px); border: 1.5px solid orange; 
-                         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">
+                <button class="logout" data-tracking="Sign In" title="Sign in" href="#" aria-label="Sign in" id="logoutUser">
                     Log Out</button>
-       
-        </div>
+
+            </div>
         </section>
     </nav>
     {{else}}
-     <nav class="nav-bar" style="background-color:white; padding:2px; ">
+    <nav class="nav-bar">
         <section class="top-bar">
             <div id="logo">
-               <a href="/"> <img src="/photos/logo.png" style="margin-right:35%;" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true"></a>
-             <a href="/login-user"> <button class="button login"  style=" color:sandybrown; margin:25px 10px 40px; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; margin-left:90px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Log
-                    In</button></a>
-             <a href="/register-user"> <button class="button signup"  style=" color:sandybrown; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent;">Sign
-                    Up</button></a>
+                <a href="/"> <img src="/photos/logo.png" style="margin-right:35%;" class="auth-image" alt="logo" width="17%"
+                        height="27%" data-pin-nopin="true"></a>
+                <a href="/login-user"> <button class="button login" id="logIn">Log
+                        In</button></a>
+                <a href="/register-user"> <button class="button signup" id="registerUser">Sign
+                        Up</button></a>
 
         </section>
         </div>
     </nav>
     {{/if}}
     {{{body}}}
-   <div class="home-page-footer" style="margin:10px; text-align:center;">
-        <nav class="nav-footer" style="background-color:rgb(226, 221, 221);">
+    <div class="home-page-footer" id="alignMargin">
+        <nav class="nav-footer" id="navFooter">
             <div class="link-section-columns">
                 <div class="column">
                     <div class="footer-section">
-                        <div class="title" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; letter-spacing:3.5px; color:rgb(240, 121, 16)">Support</div>
-                        <a class="footer-link" title="ferMentor" aria-label="About ferMentor" href="/about" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">About
+                        <div class="title titleFooter" >Support</div>
+                        <a class="footer-link" title="ferMentor" aria-label="About ferMentor" href="/about">About
                             FerMentor</a>
                         <br>
-                        <a class="footer-link" title="Contact Us" aria-label="Contact Us" href="/about#contact" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serifl">Contact
+                        <a class="footer-link tableHeader" title="Contact Us" aria-label="Contact Us" href="/about#contact" >Contact
                             Us</a>
                     </div>
                 </div>
                 <div class="flex-expander">
                     <div class="column">
                         <div class="footer-section">
-                            <div class="title" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; letter-spacing:3.5px; color:rgb(240, 121, 16)">Tools</div>
-                            <a class="footer-link" href="/FAQs" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">FAQs</a>
+                            <div class="title titleFooter" >Tools</div>
+                            <a class="footer-link" href="/FAQs">FAQs</a>
                         </div>
                     </div>
-                    <div class="title social-media-title" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; letter-spacing:3.5px; color:rgb(240, 121, 16);">Follow
+                    <div class="title social-media-title" id="followUs">Follow
                         Us</div>
                     <div class="social-media-links"><a id="qa-social-facebook" href="https://facebook.com" title="ferMentor on Facebook"
                             aria-label="ferMentor on Facebook" target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon"
                                 data-icon="f"></span>
-                            <span class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
-                                 <i class="fab fa-facebook" ></i></span></a>
-                        
-                        <a id="qa-social-pinterest" href="https://pinterest.com" title="ferMentor on Pinterest" aria-label="ferMentor on Pinterest"
-                            target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon" data-icon="p"></span><span
-                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
-                                 <i class="fab fa-pinterest"></i></span></a>
-                        
-                        <a id="qa-social-instagram" href="https://instagram.com" title="ferMentor on Instagram" aria-label="ferMentor on Instagram"
-                            target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon" data-icon="i"></span><span
-                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
-                                 <i class="fab fa-instagram"></i></span></a>
-                        
-                        <a id="qa-social-youtube" href="https://www.youtube.com" title="ferMentor on YouTube" aria-label="ferMentor on YouTube"
-                            target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon" data-icon="u"></span><span
-                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
-                                 <i class="fab fa-youtube"></i></span></a></div>
-                                 <br>
-                                 
+                            <span class="screen-reader-text socialIcons" >
+                                <i class="fab fa-facebook"></i></span></a>
+
+                        <a id="qa-social-pinterest" href="https://pinterest.com" title="ferMentor on Pinterest"
+                            aria-label="ferMentor on Pinterest" target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon"
+                                data-icon="p"></span><span class="screen-reader-text socialIcons" >
+                                <i class="fab fa-pinterest"></i></span></a>
+
+                        <a id="qa-social-instagram" href="https://instagram.com" title="ferMentor on Instagram"
+                            aria-label="ferMentor on Instagram" target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon"
+                                data-icon="i"></span><span class="screen-reader-text socialIcons" >
+                                <i class="fab fa-instagram"></i></span></a>
+
+                        <a id="qa-social-youtube" href="https://www.youtube.com" title="ferMentor on YouTube"
+                            aria-label="ferMentor on YouTube" target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon"
+                                data-icon="u"></span><span class="screen-reader-text socialIcons" >
+                                <i class="fab fa-youtube"></i></span></a></div>
+                    <br>
+
                 </div>
             </div>
     </div>
     </div>
 
-  
+
 
 </body>
 
 </html>
-
