--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -1,6 +1,6 @@
-<table class="table table-sm table-striped w-50 pb-10 " align="center" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+<table class="table table-sm table-striped w-50 pb-10 tableHeader " align="center" >
   <thead>
-    <tr style="background-color:sandybrown; color:white; text-align:center;">
+    <tr id="tableRow">
       <th>Project Name</th>
       <th>General Instructions</th>
       <th> </th>
@@ -22,7 +22,7 @@
     </tr>
     {{/each}}
     
-    <tr style="background-color: white">
+    <tr id="tableRow">
       <td colspan=2><button type="button" id = "addProject" class="btn btn-primary" > Add New Project </button></td>
       <td></td>
       <td></td>
