--- a/views/projectList.handlebars
+++ b/views/projectList.handlebars
@@ -1,3 +1,4 @@
+<br>
 {{#if viewMy}}
 <h3 class="text-center">{{user.username}}'s Projects</h3>
 {{else}}
@@ -5,7 +6,7 @@
 {{/if}}
 
 
-<table class="table table-sm table-striped w-50 pb-10" align="center" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+<table class="table table-sm table-striped w-50 pb-10 tableHeader" align="center" >
 
 
     <thead class="table-info">
