--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -9,10 +9,10 @@
       <th> </th>
     </tr>
   </thead>
+  {{!-- Partial for display list of projects in /new --}}
   <tbody>
     {{#each projects}}
     <tr>
-
       <td>{{name}}</td>
       <td>{{instructions}}</td>
       <td>{{userId}}</td>
