--- a/views/projectList.handlebars
+++ b/views/projectList.handlebars
@@ -1,3 +1,4 @@
+     {{!-- /projectlist and /myprojects they share the same code depending on viewMy flag--}}
 <br>
 {{#if viewMy}}
 <h3 class="text-center">{{user.username}}'s Projects</h3>
