--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,3 +1,5 @@
+     {{!-- Add tasks to the project --}}
+
 <div class="current task" style="background-color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
 <h1>New Task for - {{projects.name}}</h1>
 
